Solr version of tale of two queries

--- a/tale-of-two-queries (Solr).ipynb
+++ b/tale-of-two-queries (Solr).ipynb
@@ -33,6 +33,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Switch to Solr\n",
+    "By default examples run against elastic, the following snippet will change things to Solr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Switched to Solr client_mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ltr import useSolr\n",
+    "useSolr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Our Task: Optimizing \"Drama\" and \"Science Fiction\" queries\n",
     "\n",
     "In this example we have two user queries\n",
@@ -56,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,79 +127,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removed LTR feature store: 200\n",
-      "Initialize LTR: 200\n",
-      "Created genre feature set: 201\n"
+      "Deleted classic model: 200\n",
+      "Deleted latest model: 200\n",
+      "Delete release feature store: 200\n",
+      "Delete _DEFAULT_ feature store: 200\n",
+      "Created genre feature store under tmdb: 200\n"
      ]
     }
    ],
    "source": [
-    "config = {\n",
-    "    \"featureset\": {\n",
-    "            \"features\": [\n",
+    "config = [\n",
     "            {\n",
-    "                \"name\": \"release_year\",\n",
-    "                \"params\": [],\n",
-    "                \"template\": {\n",
-    "                    \"function_score\": {\n",
-    "                        \"field_value_factor\": {\n",
-    "                        \"field\": \"release_year\",\n",
-    "                        \"missing\": 2000\n",
-    "                    },\n",
-    "                    \"query\": { \"match_all\": {} }\n",
-    "                }\n",
-    "            }\n",
-    "            },\n",
-    "             {\n",
-    "                \"name\": \"is_sci_fi\",\n",
-    "                \"params\": [],\n",
-    "                \"template\": {\n",
-    "                    \"constant_score\": {\n",
-    "                        \"filter\": {\n",
-    "                            \"match_phrase\": {\"genres\": \"Science Fiction\"}\n",
-    "                        },\n",
-    "                        \"boost\": 10.0                    }\n",
-    "            }\n",
-    "            },\n",
-    "             {\n",
-    "                \"name\": \"is_drama\",\n",
-    "                \"params\": [],\n",
-    "                \"template\": {\n",
-    "                    \"constant_score\": {\n",
-    "                        \"filter\": {\n",
-    "                            \"match_phrase\": {\"genres\": \"Drama\"}\n",
-    "                        },\n",
-    "                        \"boost\": 4.0                    }\n",
+    "                \"store\": \"genre\", # Note: This overrides the _DEFAULT_ feature store location\n",
+    "                \"name\" : \"release_year\",\n",
+    "                \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
+    "                \"params\" : {\n",
+    "                  \"q\" : \"{!func}def(release_year,2000)\"\n",
     "                }\n",
     "            },\n",
-    "             {\n",
-    "                \"name\": \"is_genre_match\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"constant_score\": {\n",
-    "                        \"filter\": {\n",
-    "                            \"match_phrase\": {\"genres\": \"{{keywords}}\"}\n",
-    "                        },\n",
-    "                        \"boost\": 100.0\n",
-    "                    }\n",
+    "            {\n",
+    "                \"store\": \"genre\",\n",
+    "                \"name\" : \"is_sci_fi\",\n",
+    "                \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
+    "                \"params\" : {\n",
+    "                  \"q\" : \"genres:\\\"Science Fiction\\\"^=10.0\"\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"store\": \"genre\",\n",
+    "                \"name\" : \"is_drama\",\n",
+    "                \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
+    "                \"params\" : {\n",
+    "                  \"q\" : \"genres:\\\"Drama\\\"^=4.0\"\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"store\": \"genre\",\n",
+    "                \"name\" : \"is_genre_match\",\n",
+    "                \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
+    "                \"params\" : {\n",
+    "                  \"q\" : \"genres:\\\"${keywords}\\\"^=100.0\"\n",
     "                }\n",
     "            }\n",
-    "    ]\n",
-    "    },\n",
-    "    \"validation\": {\n",
-    "       \"params\": {\n",
-    "           \"keywords\": \"Science Fiction\"\n",
-    "       },\n",
-    "       \"index\": \"tmdb\"\n",
-    "    }\n",
-    "}\n",
+    "]\n",
+    "\n",
     "\n",
     "from ltr import setup_ltr\n",
     "setup_ltr.run(config=config, featureset='genre')"
@@ -190,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -230,13 +234,13 @@
      "text": [
       "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t NDCG@10 -tree 100 -train data/genre_by_date_judgments_train.txt -save data/genre_model.txt\n",
       "DONE\n",
-      "Delete model genre: 404\n",
+      "Delete model genre: 200\n",
       "Created model genre: 201\n",
       "\n",
       "Impact of each feature on the model\n",
-      "1 - 30989934.22204985\n",
-      "2 - 2891683.161237409\n",
-      "3 - 24.47444925009026\n",
+      "1 - 2026215.8362666676\n",
+      "2 - 1656425.5189779215\n",
+      "3 - 0.009307155595000033\n",
       "4 - 0.0\n",
       "Perfect NDCG! 1.0\n"
      ]
@@ -267,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -275,35 +279,35 @@
      "output_type": "stream",
      "text": [
       "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Science Fiction\"}, \"model\": \"genre\"}}}\n",
-      "Why Him? \n",
-      "10.492266 \n",
-      "2016 \n",
+      "Elstree Calling \n",
+      "10.404307 \n",
+      "1930 \n",
+      "['Music', 'Comedy'] \n",
+      "A series of 19 musical and comedy \"vaudeville\" sketches presented in the form of a live broadcast hosted by Tommy Handley (as himself). There are two \"running gags\" which connect the sketches. In one, an actor wants to perform Shakespeare, but he is continually denied air-time. The other gag has an inventor trying to view the broadcast on television. \n",
+      "---------------------------------------\n",
+      "With Byrd at the South Pole \n",
+      "10.404307 \n",
+      "1930 \n",
+      "['Documentary'] \n",
+      "With Byrd at the South Pole (1930) is a documentary film about Rear Admiral Richard E. Byrd and his 1st quest to the South Pole beginning at the Little America-Exploration Base. The film's soundtrack consists mostly of music and sound effects, with narration read by Floyd Gibbons. The film won at the 3rd Academy Awards for Best Cinematography. \n",
+      "---------------------------------------\n",
+      "Liliom \n",
+      "10.404307 \n",
+      "1930 \n",
+      "['Drama'] \n",
+      "A carousel barker falls in love with a young woman. Both are fired from their jobs, and when the young woman becomes pregnant, the carousel barker tries to help pull off a robbery, which goes wrong. Because of the robbery, he dies, and after spending time in hell, is sent back to earth for one day to try to make amends. \n",
+      "---------------------------------------\n",
+      "Animal Crackers \n",
+      "10.404307 \n",
+      "1930 \n",
       "['Comedy'] \n",
-      "Ned, an overprotective dad, visits his daughter at Stanford where he meets his biggest nightmare: her well-meaning but socially awkward Silicon Valley billionaire boyfriend, Laird. A rivalry develops and Ned's panic level goes through the roof when he finds himself lost in this glamorous high-tech world and learns Laird is about to pop the question. \n",
+      "The famous Captain Spaulding returns from Africa and attends a gala party where a valuable painting is stolen. \n",
       "---------------------------------------\n",
-      "X-Men: Apocalypse \n",
-      "10.492266 \n",
-      "2016 \n",
-      "['Science Fiction'] \n",
-      "After the re-emergence of the world's first mutant, world-destroyer Apocalypse, the X-Men must unite to defeat his extinction level plan. \n",
-      "---------------------------------------\n",
-      "I Am Not a Serial Killer \n",
-      "10.492266 \n",
-      "2016 \n",
-      "['Horror', 'Thriller'] \n",
-      "Fifteen-year old John Cleaver is dangerous, and he knows it. He’s obsessed with serial killers, but really doesn’t want to become one. Terrible impulses constantly tempt him, so for his own sake, and the safety of those around, he lives by rigid rules to keep himself “good” and “normal”. However, when a real monster shows up in his town he has to let his dark side out in order to stop it – but without his rules to keep him in check, he might be more dangerous than the monster he’s trying to kill. \n",
-      "---------------------------------------\n",
-      "Tamara \n",
-      "10.492266 \n",
-      "2016 \n",
-      "['Comedy'] \n",
-      "Tamara, 15, complexed with her curves, decided its entry into second to get rid of the label of \"big\". To shut up the gossip, she made a bet with her best friend to go out with the first boy who pass the classroom door. No luck, the boy turns out to be Diego, the most handsome guy of high school. The bet is complicated for Tamara .... Between the dirty tricks of bitches of high school, a mother hen, boards \"drag\" his little sister, Tamara is a memorable year! \n",
-      "---------------------------------------\n",
-      "The Neon Demon \n",
-      "10.492266 \n",
-      "2016 \n",
-      "['Thriller', 'Horror'] \n",
-      "When aspiring model Jesse moves to Los Angeles, her youth and vitality are devoured by a group of beauty-obsessed women who will take any means necessary to get what she has. \n",
+      "Westfront 1918 \n",
+      "10.404307 \n",
+      "1930 \n",
+      "['Drama', 'War'] \n",
+      "A group of German infantrymen of the First World War live out their lives in the trenches of France. They find brief entertainment and relief in a village behind the lines, but primarily terror fills their lives as the attacks on and from the French army ebb and flow. One of the men, Karl, goes home on leave only to discover the degradation forced on his family by wartime poverty. He returns to the lines in time to face an enormous attack by French tanks. \n",
       "---------------------------------------\n"
      ]
     }
@@ -333,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -393,50 +397,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Science Fiction\"}, \"model\": \"genre\"}}}\n",
-      "X-Men: Apocalypse \n",
-      "10.714813 \n",
-      "2016 \n",
-      "['Science Fiction'] \n",
-      "After the re-emergence of the world's first mutant, world-destroyer Apocalypse, the X-Men must unite to defeat his extinction level plan. \n",
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Drama\"}, \"model\": \"genre\"}}}\n",
+      "The Shamrock Handicap \n",
+      "9.445964 \n",
+      "1926 \n",
+      "['Romance', 'Drama'] \n",
+      "The first film having an Irish motif that John Ford directed, a six reel delight set in Eire's County Kildare and in the United States, with a steeplechase background, mixing charged elements of comedy and sentimental drama, benefiting from a sterling cast including Leslie Fenton, Janet Gaynor, and Ford favourite J. Farrell MacDonald. \n",
       "---------------------------------------\n",
-      "Spectral \n",
-      "10.714813 \n",
-      "2016 \n",
-      "['Thriller', 'Action', 'Science Fiction'] \n",
-      "A special-ops team is dispatched to fight supernatural beings that have taken over a European city. \n",
+      "Sparrows \n",
+      "9.445964 \n",
+      "1926 \n",
+      "['Drama'] \n",
+      "Evil Mr.Grimes keeps a rag-tag bunch orphans on his farm deep in a swamp in the US South. He forces them to work in his garden and treats them like slaves. They are watched over by the eldest, Molly. A gang in league with Mr. Grimes kidnaps Doris, the beautiful little daughter of a rich man, and hides her out on Grimes' farm, awaiting ransom. When the police close in, and Mr. Grimes threatens to throw Doris into the bottomless mire, Molly must lead her little flock out through the alligator-infested swamp. \n",
       "---------------------------------------\n",
-      "Transformers: The Last Knight \n",
-      "10.714813 \n",
-      "2017 \n",
-      "['Action', 'Science Fiction', 'Thriller', 'Adventure'] \n",
-      "Autobots and Decepticons are at war, with humans on the sidelines. Optimus Prime is gone. The key to saving our future lies buried in the secrets of the past, in the hidden history of Transformers on Earth. \n",
+      "Faust \n",
+      "9.445964 \n",
+      "1926 \n",
+      "['Drama', 'Fantasy', 'Horror'] \n",
+      "God and Satan war over earth; to settle things, they wager on the soul of Faust, a learned and prayerful alchemist. \n",
       "---------------------------------------\n",
-      "Life \n",
-      "10.714813 \n",
-      "2017 \n",
-      "['Horror', 'Science Fiction', 'Thriller'] \n",
-      "The six-member crew of the International Space Station is tasked with studying a sample from Mars that may be the first proof of extra-terrestrial life, which proves more intelligent than ever expected. \n",
+      "The Son of the Sheik \n",
+      "9.445964 \n",
+      "1926 \n",
+      "['Adventure', 'Drama', 'Action', 'Romance'] \n",
+      "Ahmed, son of Diana and Sheik Ahmed Ben Hassan, falls in love with Yasmin, a dancing girl who fronts her father's gang of mountebanks. She and Ahmed meet secretly until one night when her father and the gang capture the son of the sheik, torture him, and hold him for ransom. \n",
       "---------------------------------------\n",
-      "Monster Trucks \n",
-      "10.714813 \n",
-      "2016 \n",
-      "['Action', 'Comedy', 'Science Fiction'] \n",
-      "Looking for any way to get away from the life and town he was born into, Tripp, a high school senior, builds a Monster Truck from bits and pieces of scrapped cars. After an accident at a nearby oil-drilling site displaces a strange and subterranean creature with a taste and a talent for speed, Tripp may have just found the key to getting out of town and a most unlikely friend. \n",
+      "The Adventures of Prince Achmed \n",
+      "9.445964 \n",
+      "1926 \n",
+      "['Drama', 'Animation', 'Adventure', 'Fantasy'] \n",
+      "Based on stories from \"The Arabian Nights.\" A wicked sorcerer tricks Prince Achmed into riding a magical flying horse. The heroic prince is able to subdue the magical horse, which he uses to fly off to many adventures. While travelling, he falls in love with the beautiful Princess Peri Banu, and must defeat an army of demons to win her heart. The film is animated using the silhouette technique. \n",
       "---------------------------------------\n"
      ]
     }
    ],
    "source": [
     "from ltr import search\n",
-    "search.run(keywords=\"Science Fiction\", modelName=\"genre\")"
+    "search.run(keywords=\"Drama\", modelName=\"genre\")"
    ]
   },
   {
