Solr tales fixes

--- a/tale-of-two-queries (Solr).ipynb
+++ b/tale-of-two-queries (Solr).ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,9 +135,11 @@
      "output_type": "stream",
      "text": [
       "Deleted classic model: 200\n",
+      "Deleted genre model: 200\n",
       "Deleted latest model: 200\n",
+      "Delete _DEFAULT feature store: 200\n",
+      "Delete genre feature store: 200\n",
       "Delete release feature store: 200\n",
-      "Delete _DEFAULT_ feature store: 200\n",
       "Created genre feature store under tmdb: 200\n"
      ]
     }
@@ -194,16 +196,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recognizing 2 queries...\n",
-      "REBUILDING TRAINING DATA for Science Fiction (0/2)\n",
-      "REBUILDING TRAINING DATA for Drama (1/2)\n"
+      "Recognizing 2 queries...\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-f19fef508eac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m trainingSet = collectFeatures.trainingSetFromJudgments(judgmentInFile='data/genre_by_date_judgments.txt', \n\u001b[1;32m      3\u001b[0m                                                        \u001b[0mtrainingOutFile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/genre_by_date_judgments_train.txt'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                                                        featureSet='genre')\n\u001b[0m",
+      "\u001b[0;32m~/dev/osc/train/hello-ltr/ltr/collectFeatures.py\u001b[0m in \u001b[0;36mtrainingSetFromJudgments\u001b[0;34m(judgmentInFile, featureSet, trainingOutFile)\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0mjudgments\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjudgmentsFromFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjudgmentInFile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0mjudgments\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjudgmentsByQid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjudgments\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m     \u001b[0mlogFeatures\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjudgments\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatureSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeatureSet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0mjudgmentsAsList\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/osc/train/hello-ltr/ltr/collectFeatures.py\u001b[0m in \u001b[0;36mlogFeatures\u001b[0;34m(judgmentsByQid, featureSet)\u001b[0m\n\u001b[1;32m     46\u001b[0m             \u001b[0;31m# Add feature back to each judgment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m                 \u001b[0mdocId\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdoc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m                 \u001b[0mfeatures\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdoc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ltr_features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m                 \u001b[0mfeaturesPerDoc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdocId\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'id'"
      ]
     }
    ],
