Fix to hello-ltr solr mode

--- a/hello-ltr (Solr).ipynb
+++ b/hello-ltr (Solr).ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -250,9 +250,11 @@
      "output_type": "stream",
      "text": [
       "Deleted classic model: 200\n",
+      "Deleted genre model: 200\n",
       "Deleted latest model: 200\n",
+      "Delete _DEFAULT feature store: 200\n",
+      "Delete genre feature store: 200\n",
       "Delete release feature store: 200\n",
-      "Delete _DEFAULT_ feature store: 200\n",
       "Created release feature store under tmdb: 200\n"
      ]
     }
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,10 +338,10 @@
     {
      "data": {
       "text/plain": [
-       "<ltr.train.TrainingLog at 0x111158128>"
+       "<ltr.train.TrainingLog at 0x12a0a9f28>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +390,7 @@
          "mode": "lines",
          "name": "classic",
          "type": "scatter",
-         "uid": "2dbefd85-ffda-4533-b07a-8cc45bfd369f",
+         "uid": "ed001155-5e9f-474c-9127-e806e6c932b9",
          "x": [
           0,
           1,
@@ -426,39 +428,39 @@
           1943,
           1989,
           1966,
-          2005,
-          2003,
-          2005,
-          1998,
-          1998,
-          1995,
-          1997,
-          2000,
-          1993,
           1992,
-          2016,
-          2008,
           2013,
+          2000,
           2012,
           2010,
-          2014,
-          2008,
-          2009,
-          2017,
+          2005,
+          1998,
+          1998,
+          1997,
           2011,
           2010,
+          2008,
+          2009,
+          2005,
+          2008,
+          2003,
+          2013,
+          1993,
+          1995,
+          2014,
+          2017,
           2014,
           2015,
           2016,
           2016,
-          2013
+          2016
          ]
         },
         {
          "mode": "lines",
          "name": "latest",
          "type": "scatter",
-         "uid": "075704a9-4465-4d64-ac4c-67356b8f0c81",
+         "uid": "4886feb6-6a32-449e-b61d-b7ec88a1343f",
          "x": [
           0,
           1,
@@ -492,54 +494,54 @@
           29
          ],
          "y": [
-          2013,
-          2013,
-          2011,
-          2012,
           2014,
           2014,
+          2016,
+          2016,
           2016,
           2017,
           2015,
-          2016,
-          2016,
+          2013,
+          2012,
+          2011,
+          2013,
+          2000,
+          2010,
+          2005,
           1998,
           1998,
-          1995,
           1997,
-          1993,
-          1992,
-          2003,
-          2008,
           2010,
           2008,
           2009,
-          2010,
           2005,
-          2000,
-          2005,
-          1966,
-          1989,
+          2008,
+          1995,
+          2003,
+          1993,
+          1992,
           1949,
-          1943
+          1966,
+          1943,
+          1989
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"29cbee73-3caf-48d5-8177-fb9e84faa526\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"29cbee73-3caf-48d5-8177-fb9e84faa526\")) {\n",
-       "    Plotly.newPlot(\"29cbee73-3caf-48d5-8177-fb9e84faa526\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 2005, 2003, 2005, 1998, 1998, 1995, 1997, 2000, 1993, 1992, 2016, 2008, 2013, 2012, 2010, 2014, 2008, 2009, 2017, 2011, 2010, 2014, 2015, 2016, 2016, 2013], \"type\": \"scatter\", \"uid\": \"2dbefd85-ffda-4533-b07a-8cc45bfd369f\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2013, 2013, 2011, 2012, 2014, 2014, 2016, 2017, 2015, 2016, 2016, 1998, 1998, 1995, 1997, 1993, 1992, 2003, 2008, 2010, 2008, 2009, 2010, 2005, 2000, 2005, 1966, 1989, 1949, 1943], \"type\": \"scatter\", \"uid\": \"075704a9-4465-4d64-ac4c-67356b8f0c81\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"20b3f0b4-d674-47ec-9542-6df0c8baff38\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\")) {\n",
+       "    Plotly.newPlot(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 1998, 1998, 1997, 2011, 2010, 2008, 2009, 2005, 2008, 2003, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"ed001155-5e9f-474c-9127-e806e6c932b9\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 1998, 1998, 1997, 2010, 2008, 2009, 2005, 2008, 1995, 2003, 1993, 1992, 1949, 1966, 1943, 1989], \"type\": \"scatter\", \"uid\": \"4886feb6-6a32-449e-b61d-b7ec88a1343f\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"29cbee73-3caf-48d5-8177-fb9e84faa526\")) {window._Plotly.Plots.resize(document.getElementById(\"29cbee73-3caf-48d5-8177-fb9e84faa526\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\")) {window._Plotly.Plots.resize(document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\"));};})</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"29cbee73-3caf-48d5-8177-fb9e84faa526\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"29cbee73-3caf-48d5-8177-fb9e84faa526\")) {\n",
-       "    Plotly.newPlot(\"29cbee73-3caf-48d5-8177-fb9e84faa526\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 2005, 2003, 2005, 1998, 1998, 1995, 1997, 2000, 1993, 1992, 2016, 2008, 2013, 2012, 2010, 2014, 2008, 2009, 2017, 2011, 2010, 2014, 2015, 2016, 2016, 2013], \"type\": \"scatter\", \"uid\": \"2dbefd85-ffda-4533-b07a-8cc45bfd369f\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2013, 2013, 2011, 2012, 2014, 2014, 2016, 2017, 2015, 2016, 2016, 1998, 1998, 1995, 1997, 1993, 1992, 2003, 2008, 2010, 2008, 2009, 2010, 2005, 2000, 2005, 1966, 1989, 1949, 1943], \"type\": \"scatter\", \"uid\": \"075704a9-4465-4d64-ac4c-67356b8f0c81\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"20b3f0b4-d674-47ec-9542-6df0c8baff38\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\")) {\n",
+       "    Plotly.newPlot(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1989, 1966, 1992, 2013, 2000, 2012, 2010, 2005, 1998, 1998, 1997, 2011, 2010, 2008, 2009, 2005, 2008, 2003, 2013, 1993, 1995, 2014, 2017, 2014, 2015, 2016, 2016, 2016], \"type\": \"scatter\", \"uid\": \"ed001155-5e9f-474c-9127-e806e6c932b9\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2016, 2016, 2016, 2017, 2015, 2013, 2012, 2011, 2013, 2000, 2010, 2005, 1998, 1998, 1997, 2010, 2008, 2009, 2005, 2008, 1995, 2003, 1993, 1992, 1949, 1966, 1943, 1989], \"type\": \"scatter\", \"uid\": \"4886feb6-6a32-449e-b61d-b7ec88a1343f\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"29cbee73-3caf-48d5-8177-fb9e84faa526\")) {window._Plotly.Plots.resize(document.getElementById(\"29cbee73-3caf-48d5-8177-fb9e84faa526\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\")) {window._Plotly.Plots.resize(document.getElementById(\"20b3f0b4-d674-47ec-9542-6df0c8baff38\"));};})</script>"
       ]
      },
      "metadata": {},
